# pyobsidian

./: .gitignore  README.md  pyproject.toml
nbs/: get_files.ipynb
pyobsidian/: client.py  const.py  models.py  util.py
